--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
     "@angular/platform-browser": "~13.0.0",
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
-    "@capacitor/app": "1.1.0",
-    "@capacitor/core": "^3.4.0",
-    "@capacitor/haptics": "1.1.4",
-    "@capacitor/keyboard": "1.2.1",
-    "@capacitor/status-bar": "1.0.7",
+    "@capacitor/app": "^1.1.0",
+    "@capacitor/cli": "^2.5.0",
+    "@capacitor/core": "^2.5.0",
+    "@capacitor/haptics": "^1.1.4",
+    "@capacitor/keyboard": "^1.2.1",
+    "@capacitor/status-bar": "^1.0.7",
     "@ionic/angular": "^6.0.0",
     "@ionic/storage": "^3.0.6",
     "@ionic/storage-angular": "^3.0.6",
@@ -45,7 +46,6 @@
     "@angular/compiler": "~13.0.0",
     "@angular/compiler-cli": "~13.0.0",
     "@angular/language-service": "~13.0.0",
-    "@capacitor/cli": "^3.4.0",
     "@ionic/angular-toolkit": "^5.0.0",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
