--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~13.0.0",
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
+    "@capacitor/android": "^2.5.0",
     "@capacitor/app": "^1.1.0",
     "@capacitor/cli": "^2.5.0",
     "@capacitor/core": "^2.5.0",
